[gd_scene load_steps=4 format=3 uid="uid://blrr6h1suex0a"]

[ext_resource type="Script" uid="uid://3nnbv6wfuaw3" path="res://Scene/Objetos/Mesita.gd" id="1_qra7i"]
[ext_resource type="Texture2D" uid="uid://xnkupcale2i1" path="res://Assets/Objetos/Mesa.png" id="2_813gm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlfuj"]
size = Vector2(58, 33)

[node name="Mesita" type="StaticBody2D"]
script = ExtResource("1_qra7i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -8.5)
shape = SubResource("RectangleShape2D_rlfuj")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.00001, 4.25)
scale = Vector2(0.428, 0.294)
texture = ExtResource("2_813gm")

[node name="Ocultar" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -8.5)
shape = SubResource("RectangleShape2D_rlfuj")

[connection signal="timeout" from="Ocultar" to="." method="_on_ocultar_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
